<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.fraggel.gesturecontrol.AirGestureActivity">

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airCamera"
        android:id="@+id/airCamera"
        android:layout_marginBottom="10dp"/>
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airFM"
        android:id="@+id/airFM"
        android:layout_marginBottom="10dp"/>
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airGallery"
        android:id="@+id/airGallery"
        android:layout_marginBottom="10dp"/>
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airLauncher"
        android:id="@+id/airLauncher"
        android:layout_marginBottom="10dp"/>
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airMusic"
        android:id="@+id/airMusic"
        android:layout_marginBottom="10dp"/>
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/airUnlock"
        android:id="@+id/airUnlock"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
