<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.fraggel.gesturecontrol.screenOffActivity">
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/masterScreenOff"
        android:id="@+id/masterGestureOff" />


    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:shrinkColumns="1">
    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drawDC"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:text="@string/drawDC"
            android:id="@+id/drawDCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"/>

    </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawUpU"
                android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawUpU"
            android:id="@+id/drawUpUT"
            android:paddingLeft="10dp"/>


    </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawDownM"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawDownM"
                android:id="@+id/drawDownMT"
                android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawRightM"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawRightM"
                android:id="@+id/drawRightMT"
                android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawLeftM"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawLeftM"
                android:id="@+id/drawLeftMT"
                android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawC"
                android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/drawC"
        android:id="@+id/drawCT"
        android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawE"
                android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drawE"
            android:id="@+id/drawET"
            android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawW"
                android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drawW"
            android:id="@+id/drawWT"
            android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawM"
                android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drawM"
            android:id="@+id/drawMT"
            android:paddingLeft="10dp"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawO"
                android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drawO"
            android:id="@+id/drawOT"
            android:paddingLeft="10dp"
            />

        </TableRow>
        <!--<TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawRightBt"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="20dp"
                android:text="@string/drawRightBt"
                android:id="@+id/drawRightBtT"/>

        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/drawLeftBt"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/drawLeftBt"
                android:paddingRight="20dp"
                android:id="@+id/drawLeftBtT"/>

        </TableRow>-->
    </TableLayout>
</LinearLayout>
</ScrollView>
